--- a/settings.json
+++ b/settings.json
@@ -4,8 +4,7 @@
   "galaxy.meteor.com": {
     "env": {
       "MONGO_URL": "mongodb://goldrunadmin:Turnf34ragainst!@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true",
-      "ROOT_URL": "https://www.goldrun.meteorapp.com"
-
+      "ROOT_URL": "https://www.goldrun.io"
     }
   }
 }
