--- a/settings.json
+++ b/settings.json
@@ -3,7 +3,7 @@
   "cloudinary_secret": "rPPXD3rZM_GCjODvh0T70XeDCSw",
   "galaxy.meteor.com": {
     "env": {
-      "MONGO_URL": "mongodb://goldrunadmin:Turnf34ragainst!@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true",
+      "MONGO_URL": "mongodb://goldrunadmin:turnfearagainstthose@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true",
       "ROOT_URL": "https://www.goldrun.io"
     }
   }
