--- a/settings.json
+++ b/settings.json
@@ -35,7 +35,8 @@
 	"galaxy.meteor.com": {
 		"env": {
 			"MONGO_URL": "mongodb://goldrunadmin:turnfearagainstthose@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true",
-			"ROOT_URL": "https://www.goldrun.online"
+            "MAIL_URL": "smtp://sethmintom@gmail.com:repj1984!@@smtp.gmail.com:587",
+			"ROOT_URL": "https://www.dao.af"
 		}
 	}
 }
