--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"watson-developer-cloud": "^3.3.0"
 	},
 	"scripts": {
-		"start": "MAIL_URL='smtp://sethmintom@gmail.com:repj1984!@@smtp.gmail.com:587/' MONGO_URL=mongodb://goldrunadmin:turnfearagainstthose@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true meteor --settings settings.json",
-		"local": "MAIL_URL='smtp://sethmintom@gmail.com:repj1984!@@smtp.gmail.com:587/' meteor --settings settings.json"
+		"start": "MAIL_URL='smtp://postmaster@mg.goldrun.online:5d3d543f74cc9cb12c7cc831a2b2a3b1-4a62b8e8-dfb738a0@@smtp.mailgun.org:587/' MONGO_URL=mongodb://goldrunadmin:turnfearagainstthose@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true meteor --settings settings.json",
+		"local": "MAIL_URL='smtp://postmaster@mg.goldrun.online:5d3d543f74cc9cb12c7cc831a2b2a3b1-4a62b8e8-dfb738a0@@smtp.mailgun.org:587/' meteor --settings settings.json"
 	}
 }
