--- a/settings.json
+++ b/settings.json
@@ -35,8 +35,8 @@
 	"galaxy.meteor.com": {
 		"env": {
 			"MONGO_URL": "mongodb://goldrunadmin:turnfearagainstthose@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true",
-            "MAIL_URL": "smtp://sethmintom@gmail.com:repj1984!@@smtp.gmail.com:587",
-			"ROOT_URL": "https://www.dao.af"
+            "MAIL_URL": "smtp://postmaster@mg.goldrun.online:5d3d543f74cc9cb12c7cc831a2b2a3b1-4a62b8e8-dfb738a0@@smtp.mailgun.org:587",
+			"ROOT_URL": "https://www.goldrun.online"
 		}
 	}
 }
