--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"dependencies": {
 		"@babel/runtime": "^7.1.2",
 		"bcrypt": "^2.0.0",
+		"dhtmlx-scheduler": "^5.1.6",
 		"jquery": "^3.3.1",
-		"tui-calendar": "^1.12.0",
 		"watson-developer-cloud": "^3.3.0"
 	},
 	"scripts": {
