--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"watson-developer-cloud": "^3.3.0"
 	},
 	"scripts": {
-		"start": "MAIL_URL='smtp://postmaster%40mg.goldrun.online:0975ef1bf94c7fe525014827dbc2455d-39bc661a-833f9eab@smtp.mailgun.org:587/' MONGO_URL=mongodb://goldrunadmin:turnfearagainstthose@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true meteor --settings settings.json",
+		"start": "MAIL_URL='smtp://postmaster%40mg.goldrun.online:0975ef1bf94c7fe525014827dbc2455d-39bc661a-833f9eab@smtp.mailgun.org:587/' MONGO_URL=mongodb://goldrunadmin!:goldrunadminpassword!@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true meteor --settings settings.json",
 		"local": "MAIL_URL='smtp://postmaster%40mg.goldrun.online:0975ef1bf94c7fe525014827dbc2455d-39bc661a-833f9eab@smtp.mailgun.org:587/' meteor --settings settings.json"
 	}
 }
