alpha working calendar range selector with time calculation

--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
+    "TZ": "America/Denver",
     "public": {
     },
 	"private": {
@@ -7,6 +8,7 @@
 	},
 	"galaxy.meteor.com": {
 		"env": {
+            "TZ": "America/Denver",
 			"MONGO_URL": "mongodb://goldrunadmin!:goldrunadminpassword!@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true",
             "MAIL_URL": "smtp://postmaster%40mg.goldrun.online:6f213f0ad9eae2a2f91f5f29a8e665bd-fd0269a6-78c00f51@smtp.mailgun.org:587",
 			"ROOT_URL": "https://www.goldrun.online"
