--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"bcrypt": "^2.0.0"
 	},
 	"scripts": {
-		"start": "MAIL_URL='smtp://postmaster%40mg.goldrun.online:6f213f0ad9eae2a2f91f5f29a8e665bd-fd0269a6-78c00f51@smtp.mailgun.org:587/' MONGO_URL=mongodb://goldrunadmin!:goldrunadminpassword!@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true meteor --settings settings.json",
+		"start": "MAIL_URL='smtp://postmaster%40mg.goldrun.online:6f213f0ad9eae2a2f91f5f29a8e665bd-fd0269a6-78c00f51@smtp.mailgun.org:587/' MONGO_URL=mongodb://goldrunadmin!:goldrunadminpassword!@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true TZ='America/Denver' meteor --settings settings.json",
 		"local": "MAIL_URL='smtp://postmaster%40mg.goldrun.online:6f213f0ad9eae2a2f91f5f29a8e665bd-fd0269a6-78c00f51@smtp.mailgun.org:587/' meteor --settings settings.json"
 	}
 }
