--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,13 @@
 {
     "TZ": "America/Denver",
     "public": {
+      "stripe_test_publishable": "pk_test_CqHTNF8uRfEHz8tB8JyJmSNs",
+      "stripe_live_publishable": "pk_live_ctL1EvE2OudaGtgkLCCGTzZh",
+      "stripe_client_id": "ca_6xrceWlIdjoZ0ebtxSUDBMG1yazAn5et"
     },
 	"private": {
+		"stripe_test_secret": "sk_test_jgKYu346r3iQoJBXDtrbzJh2",
+		"stripe_live_secret": "sk_live_wMzDBzdwNkLKqDcVkBo0waEg",        
 		"cloudinary_key": "754714459692734",
 		"cloudinary_secret": "rPPXD3rZM_GCjODvh0T70XeDCSw"
 	},
